WIP refactor to split logic

--- a/examples/webgl_lines_fat_raycasting.html
+++ b/examples/webgl_lines_fat_raycasting.html
@@ -34,15 +34,16 @@
 
 			import { GUI } from './jsm/libs/lil-gui.module.min.js';
 			import { OrbitControls } from './jsm/controls/OrbitControls.js';
-			import { Line2 } from './jsm/lines/Line2.js';
 			import { LineMaterial } from './jsm/lines/LineMaterial.js';
+			import { LineSegments2 } from './jsm/lines/LineSegments2.js';
+			import { LineSegmentsGeometry } from './jsm/lines/LineSegmentsGeometry.js';
+			import { Line2 } from './jsm/lines/Line2.js';
 			import { LineGeometry } from './jsm/lines/LineGeometry.js';
-			import * as GeometryUtils from './jsm/utils/GeometryUtils.js';
 
-			let line, renderer, scene, camera, camera2, controls;
+			let line, thresholdLine, segments, thresholdSegments;
+			let renderer, scene, camera, camera2, controls;
 			let raycaster, sphereInter, sphereOnLine;
-			let line1;
-			let matLine, matLineBasic, matLineDashed;
+			let matLine, matThresholdLine;
 			let stats, gpuPanel;
 			let gui;
 
@@ -57,7 +58,7 @@
 
 			function init() {
 
-				renderer = new THREE.WebGLRenderer( { antialias: true } );
+				renderer = new THREE.WebGLRenderer( { antialias: true, alpha: true } );
 				renderer.setPixelRatio( window.devicePixelRatio );
 				renderer.setClearColor( 0x000000, 0.0 );
 				renderer.setSize( window.innerWidth, window.innerHeight );
@@ -79,7 +80,7 @@
 				raycaster.params.Line2 = {};
 				raycaster.params.Line2.threshold = 0;
 
-				const sphereGeometry = new THREE.SphereGeometry( 0.25 );
+				const sphereGeometry = new THREE.SphereGeometry( 0.5 );
 				const sphereInterMaterial = new THREE.MeshBasicMaterial( { color: 0xff0000, depthTest: false } );
 				const sphereOnLineMaterial = new THREE.MeshBasicMaterial( { color: 0x00ff00, depthTest: false } );
 
@@ -105,7 +106,7 @@
 				}
 
 				const spline = new THREE.CatmullRomCurve3( points );
-				const divisions = Math.round( 12 * points.length );
+				const divisions = Math.round( 3 * points.length );
 				const point = new THREE.Vector3();
 				const color = new THREE.Color();
 
@@ -121,44 +122,65 @@
 
 				}
 
+				const lineGeometry = new LineGeometry();
+				lineGeometry.setPositions( positions );
+				lineGeometry.setColors( colors );
 
-				// Line2 ( LineGeometry, LineMaterial )
-
-				const geometry = new LineGeometry();
-				geometry.setPositions( positions );
-				geometry.setColors( colors );
+				const segmentsGeometry = new LineSegmentsGeometry();
+				segmentsGeometry.setPositions( positions );
+				segmentsGeometry.setColors( colors );
 
 				matLine = new LineMaterial( {
 
 					color: 0xffffff,
-					linewidth: 5, // in world units with size attenuation, pixels otherwise
+					linewidth: 2, // in world units with size attenuation, pixels otherwise
+					worldUnits: true,
 					vertexColors: true,
 
 					//resolution:  // to be set by renderer, eventually
-					dashed: false,
 					alphaToCoverage: true,
 
 				} );
 
-				line = new Line2( geometry, matLine );
+				matThresholdLine = new LineMaterial( {
+
+					color: 0xffffff,
+					linewidth: matLine.linewidth, // in world units with size attenuation, pixels otherwise
+					worldUnits: true,
+					// vertexColors: true,
+					transparent: true,
+					opacity: 0.2,
+					depthTest: false,
+					visible: false,
+					//resolution:  // to be set by renderer, eventually
+
+				} );
+
+				segments = new LineSegments2( segmentsGeometry, matLine );
+				segments.computeLineDistances();
+				segments.scale.set( 1, 1, 1 );
+				scene.add( segments );
+				segments.visible = false;
+
+				thresholdSegments = new LineSegments2( segmentsGeometry, matThresholdLine );
+				thresholdSegments.computeLineDistances();
+				thresholdSegments.scale.set( 1, 1, 1 );
+				scene.add( thresholdSegments );
+				thresholdSegments.visible = false;
+
+				line = new Line2( lineGeometry, matLine );
 				line.computeLineDistances();
 				line.scale.set( 1, 1, 1 );
 				scene.add( line );
 
-
-				// THREE.Line ( THREE.BufferGeometry, THREE.LineBasicMaterial ) - rendered with gl.LINE_STRIP
+				thresholdLine = new Line2( lineGeometry, matThresholdLine );
+				thresholdLine.computeLineDistances();
+				thresholdLine.scale.set( 1, 1, 1 );
+				scene.add( thresholdLine );
 
 				const geo = new THREE.BufferGeometry();
 				geo.setAttribute( 'position', new THREE.Float32BufferAttribute( positions, 3 ) );
 				geo.setAttribute( 'color', new THREE.Float32BufferAttribute( colors, 3 ) );
-
-				matLineBasic = new THREE.LineBasicMaterial( { vertexColors: true } );
-				matLineDashed = new THREE.LineDashedMaterial( { vertexColors: true, scale: 2, dashSize: 1, gapSize: 1 } );
-
-				line1 = new THREE.Line( geo, matLineBasic );
-				line1.computeLineDistances();
-				line1.visible = false;
-				scene.add( line1 );
 
 				//
 				document.addEventListener( 'pointermove', onPointerMove );
@@ -212,7 +234,8 @@
 
 				raycaster.setFromCamera( pointer, camera );
 
-				const intersects = raycaster.intersectObject( line, true );
+				const obj = line.visible ? line : segments;
+				const intersects = raycaster.intersectObject( obj, true );
 
 				if ( intersects.length > 0 ) {
 
@@ -220,16 +243,24 @@
 					sphereOnLine.visible = true;
 					sphereInter.position.copy( intersects[ 0 ].point );
 					sphereOnLine.position.copy( intersects[ 0 ].pointOnLine );
+					const i = intersects[ 0 ].faceIndex;
+					const colors = obj.geometry.getAttribute( 'instanceColorStart' );
+					const color = new THREE.Color().setRGB( colors.getX( i ), colors.getY( i ), colors.getZ( i ) );
+					sphereInter.material.color.copy( color.clone().offsetHSL( 0.3, 0, 0 ) );
+					sphereOnLine.material.color.copy( color.clone().offsetHSL( 0.7, 0, 0 ) );
+					renderer.domElement.style.cursor = 'crosshair';
 
 				} else {
 
 					sphereInter.visible = false;
 					sphereOnLine.visible = false;
+					renderer.domElement.style.cursor = '';
 
 				}
 
 				// renderer will set this eventually
 				matLine.resolution.set( window.innerWidth, window.innerHeight ); // resolution of the viewport
+				matThresholdLine.resolution.set( window.innerWidth, window.innerHeight ); // resolution of the viewport
 
 				gpuPanel.startQuery();
 				renderer.render( scene, camera );
@@ -267,30 +298,32 @@
 
 				const param = {
 					'line type': 0,
-					'world units': false,
-					'width': 5,
-					'alphaToCoverage': true,
-					'dashed': false,
-					'dash scale': 1,
-					'dash / gap': 1,
+					'world units': matLine.worldUnits,
+					'visualize threshold': matThresholdLine.visible,
+					'width': matLine.linewidth,
+					'alphaToCoverage': matLine.alphaToCoverage,
 					'threshold': raycaster.params.Line2.threshold
 				};
 
-				gui.add( param, 'line type', { 'LineGeometry': 0, 'gl.LINE': 1 } ).onChange( function ( val ) {
+				gui.add( param, 'line type', { 'LineGeometry': 0, 'LineSegmentsGeometry': 1 } ).onChange( function ( val ) {
 
 					switch ( val ) {
 
-						case '0':
+						case 0:
 							line.visible = true;
+							thresholdLine.visible = true;
 
-							line1.visible = false;
+							segments.visible = false;
+							thresholdSegments.visible = false;
 
 							break;
 
-						case '1':
+						case 1:
 							line.visible = false;
+							thresholdLine.visible = false;
 
-							line1.visible = true;
+							segments.visible = true;
+							thresholdSegments.visible = true;
 
 							break;
 
@@ -302,12 +335,21 @@
 
 					matLine.worldUnits = val;
 					matLine.needsUpdate = true;
+					matThresholdLine.worldUnits = val;
+					matThresholdLine.needsUpdate = true;
+
+				} );
+
+				gui.add( param, 'visualize threshold' ).onChange( function ( val ) {
+
+					matThresholdLine.visible = val;
 
 				} );
 
 				gui.add( param, 'width', 1, 10 ).onChange( function ( val ) {
 
 					matLine.linewidth = val;
+					matThresholdLine.linewidth = matLine.linewidth + raycaster.params.Line2.threshold;
 
 				} );
 
@@ -317,58 +359,10 @@
 
 				} );
 
-				gui.add( param, 'dashed' ).onChange( function ( val ) {
-
-					matLine.dashed = val;
-					line1.material = val ? matLineDashed : matLineBasic;
-
-				} );
-
-				gui.add( param, 'dash scale', 0.5, 2, 0.1 ).onChange( function ( val ) {
-
-					matLine.dashScale = val;
-					matLineDashed.scale = val;
-
-				} );
-
-				gui.add( param, 'dash / gap', { '2 : 1': 0, '1 : 1': 1, '1 : 2': 2 } ).onChange( function ( val ) {
-
-					switch ( val ) {
-
-						case '0':
-							matLine.dashSize = 2;
-							matLine.gapSize = 1;
-
-							matLineDashed.dashSize = 2;
-							matLineDashed.gapSize = 1;
-
-							break;
-
-						case '1':
-							matLine.dashSize = 1;
-							matLine.gapSize = 1;
-
-							matLineDashed.dashSize = 1;
-							matLineDashed.gapSize = 1;
-
-							break;
-
-						case '2':
-							matLine.dashSize = 1;
-							matLine.gapSize = 2;
-
-							matLineDashed.dashSize = 1;
-							matLineDashed.gapSize = 2;
-
-							break;
-
-					}
-
-				} );
-
 				gui.add( param, 'threshold', 0, 10 ).onChange( function ( val ) {
 
 					raycaster.params.Line2.threshold = val;
+					matThresholdLine.linewidth = matLine.linewidth + raycaster.params.Line2.threshold;
 
 				} );
 
