--- a/manual/examples/cameras-logarithmic-depth-buffer.html
+++ b/manual/examples/cameras-logarithmic-depth-buffer.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-    <title>Three.js - Cameras - Logoarithmic Depth Buffer</title>
+    <title>Three.js - Cameras - Logarithmic Depth Buffer</title>
     <style>
     html, body {
         margin: 0;
