Fix enum in the switch case

--- a/examples/webgl_lines_fat.html
+++ b/examples/webgl_lines_fat.html
@@ -230,14 +230,14 @@
 
 					switch ( val ) {
 
-						case '0':
+						case 0:
 							line.visible = true;
 
 							line1.visible = false;
 
 							break;
 
-						case '1':
+						case 1:
 							line.visible = false;
 
 							line1.visible = true;
@@ -285,7 +285,7 @@
 
 					switch ( val ) {
 
-						case '0':
+						case 0:
 							matLine.dashSize = 2;
 							matLine.gapSize = 1;
 
@@ -294,7 +294,7 @@
 
 							break;
 
-						case '1':
+						case 1:
 							matLine.dashSize = 1;
 							matLine.gapSize = 1;
 
@@ -303,7 +303,7 @@
 
 							break;
 
-						case '2':
+						case 2:
 							matLine.dashSize = 1;
 							matLine.gapSize = 2;
 
