--- a/examples/webgl_lines_fat_wireframe.html
+++ b/examples/webgl_lines_fat_wireframe.html
@@ -191,14 +191,14 @@
 
 					switch ( val ) {
 
-						case '0':
+						case 0:
 							wireframe.visible = true;
 
 							wireframe1.visible = false;
 
 							break;
 
-						case '1':
+						case 1:
 							wireframe.visible = false;
 
 							wireframe1.visible = true;
@@ -240,7 +240,7 @@
 
 					switch ( val ) {
 
-						case '0':
+						case 0:
 							matLine.dashSize = 2;
 							matLine.gapSize = 1;
 
@@ -249,7 +249,7 @@
 
 							break;
 
-						case '1':
+						case 1:
 							matLine.dashSize = 1;
 							matLine.gapSize = 1;
 
@@ -258,7 +258,7 @@
 
 							break;
 
-						case '2':
+						case 2:
 							matLine.dashSize = 1;
 							matLine.gapSize = 2;
 
