--- a/examples/webgpu_nodes_playground.html
+++ b/examples/webgpu_nodes_playground.html
@@ -45,7 +45,7 @@
 			{
 				"imports": {
 					"three": "../build/three.module.js",
-					"three/addons/": "./jsm/",
+					"three-addons/": "./jsm/",
 					"three-nodes/": "./jsm/nodes/"
 				}
 			}
