follow three.js static name style

--- a/examples/webgl_points_nodes.html
+++ b/examples/webgl_points_nodes.html
@@ -115,7 +115,7 @@
 
 				const lerpPosition = new Nodes.FloatNode( 0 );
 
-				const positionNode = new Nodes.MathNode( Nodes.MathNode.MIX, new Nodes.PositionNode( Nodes.PositionNode.LOCAL ), targetPosition, lerpPosition );
+				const positionNode = new Nodes.MathNode( Nodes.MathNode.Mix, new Nodes.PositionNode( Nodes.PositionNode.Local ), targetPosition, lerpPosition );
 
 				// material
 
