--- a/examples/webgpu_materials.html
+++ b/examples/webgpu_materials.html
@@ -89,24 +89,24 @@
 				//	BASIC
 				//
 
-				// PositionNode.LOCAL
+				// PositionNode.Local
 				material = new Nodes.MeshBasicNodeMaterial();
-				material.colorNode = new Nodes.PositionNode( Nodes.PositionNode.LOCAL );
+				material.colorNode = new Nodes.PositionNode( Nodes.PositionNode.Local );
 				materials.push( material );
 
-				// NormalNode.LOCAL
+				// NormalNode.Local
 				material = new Nodes.MeshBasicNodeMaterial();
-				material.colorNode = new Nodes.NormalNode( Nodes.NormalNode.LOCAL );
+				material.colorNode = new Nodes.NormalNode( Nodes.NormalNode.Local );
 				materials.push( material );
 
-				// NormalNode.WORLD
+				// NormalNode.World
 				material = new Nodes.MeshBasicNodeMaterial();
-				material.colorNode = new Nodes.NormalNode( Nodes.NormalNode.WORLD );
+				material.colorNode = new Nodes.NormalNode( Nodes.NormalNode.World );
 				materials.push( material );
 
-				// NormalNode.VIEW
+				// NormalNode.View
 				material = new Nodes.MeshBasicNodeMaterial();
-				material.colorNode = new Nodes.NormalNode( Nodes.NormalNode.VIEW );
+				material.colorNode = new Nodes.NormalNode( Nodes.NormalNode.View );
 				materials.push( material );
 
 				// TextureNode
