--- a/examples/webgpu_nodes_playground.html
+++ b/examples/webgpu_nodes_playground.html
@@ -67,6 +67,9 @@
 			import { OrbitControls } from './jsm/controls/OrbitControls.js';
 			import { FBXLoader } from './jsm/loaders/FBXLoader.js';
 
+			// Use PreviewEditor in WebGL for now
+			import { nodeFrame } from './jsm/renderers/webgl/nodes/WebGLNodes.js';
+
 			let stats;
 			let camera, scene, renderer;
 			let model;
@@ -214,6 +217,8 @@
 			function animate() {
 
 				requestAnimationFrame( animate );
+
+				nodeFrame.update();
 
 				render();
 
