uses .lightNode only in MeshStandardNodeMaterial

--- a/examples/webgpu_nodes_playground.html
+++ b/examples/webgpu_nodes_playground.html
@@ -149,7 +149,7 @@
 
 					const node = e.node;
 
-					if ( node.value !== null && node.value.isMaterial === true ) {
+					if ( node.value !== null && node.value.isMeshStandardNodeMaterial === true ) {
 
 						const material = node.value;
 
