--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 					<ul>
 						<li><a href="https://github.com/mrdoob/three.js/">github</a></li>
 						<li><a href="https://github.com/mrdoob/three.js/archive/master.zip">download</a></li>
-						<li><a href="https://github.com/threejs/three-devtools">devtools</a></li>
+						<li><a href="https://chrome.google.com/webstore/detail/threejs-developer-tools/ebpnegggocnnhleeicgljbedjkganaek">devtools</a></li>
 					</ul>
 
 					<h2>Resources</h2>
