Move static .fromLights() to property and update .getHash()

--- a/examples/webgpu_nodes_playground.html
+++ b/examples/webgpu_nodes_playground.html
@@ -103,7 +103,7 @@
 				backLight.position.set( - 100, 20, - 260 );
 				scene.add( backLight );
 
-				nodeLights = Nodes.LightsNode.fromLights( [ topLight, backLight ] );
+				nodeLights = new Nodes.LightsNode().fromLights( [ topLight, backLight ] );
 
 				renderer = new WebGPURenderer();
 				renderer.setPixelRatio( window.devicePixelRatio );
