--- a/examples/webgpu_skinning.html
+++ b/examples/webgpu_skinning.html
@@ -67,7 +67,7 @@
 				camera.add( light );
 				scene.add( camera );
 
-				const lightNode = LightsNode.fromLights( [ light ] );
+				const lightNode = new LightsNode().fromLights( [ light ] );
 
 				const loader = new FBXLoader();
 				loader.load( 'models/fbx/Samba Dancing.fbx', function ( object ) {
