--- a/examples/webgpu_lights_selective.html
+++ b/examples/webgpu_lights_selective.html
@@ -99,9 +99,8 @@
 
 				//light nodes ( selective lights )
 
-				const allLightsNode = Nodes.LightsNode.fromLights( [ light1, light2, light3, light4 ] );
-				const redLightNode = Nodes.LightsNode.fromLights( [ light1 ] );
-				const blueLightNode = Nodes.LightsNode.fromLights( [ light2 ] );
+				const redLightNode = new Nodes.LightsNode().fromLights( [ light1 ] );
+				const blueLightNode = new Nodes.LightsNode().fromLights( [ light2 ] );
 
 				//models
 
@@ -115,7 +114,6 @@
 				scene.add( leftObject );
 
 				const centerObject = new THREE.Mesh( geometryTeapot, new Nodes.MeshStandardNodeMaterial( { color: 0x555555 } ) );
-				centerObject.material.lightNode = allLightsNode;
 				centerObject.material.normalNode = new Nodes.NormalMapNode( new Nodes.TextureNode( normalMapTexture ) );
 				centerObject.material.roughness = .5;
 				scene.add( centerObject );
@@ -180,24 +178,32 @@
 
 			function render() {
 
-				const time = Date.now() * 0.0005;
+				const time = performance.now() / 1000;
+				const lightTime = time * 0.5;
 
-				light1.position.x = Math.sin( time * 0.7 ) * 30;
-				light1.position.y = Math.cos( time * 0.5 ) * 40;
-				light1.position.z = Math.cos( time * 0.3 ) * 30;
+				light1.position.x = Math.sin( lightTime * 0.7 ) * 30;
+				light1.position.y = Math.cos( lightTime * 0.5 ) * 40;
+				light1.position.z = Math.cos( lightTime * 0.3 ) * 30;
 
-				light2.position.x = Math.cos( time * 0.3 ) * 30;
-				light2.position.y = Math.sin( time * 0.5 ) * 40;
-				light2.position.z = Math.sin( time * 0.7 ) * 30;
+				light2.position.x = Math.cos( lightTime * 0.3 ) * 30;
+				light2.position.y = Math.sin( lightTime * 0.5 ) * 40;
+				light2.position.z = Math.sin( lightTime * 0.7 ) * 30;
 
-				light3.position.x = Math.sin( time * 0.7 ) * 30;
-				light3.position.y = Math.cos( time * 0.3 ) * 40;
-				light3.position.z = Math.sin( time * 0.5 ) * 30;
+				light3.position.x = Math.sin( lightTime * 0.7 ) * 30;
+				light3.position.y = Math.cos( lightTime * 0.3 ) * 40;
+				light3.position.z = Math.sin( lightTime * 0.5 ) * 30;
 
-				light4.position.x = Math.sin( time * 0.3 ) * 30;
-				light4.position.y = Math.cos( time * 0.7 ) * 40;
-				light4.position.z = Math.sin( time * 0.5 ) * 30;
+				light4.position.x = Math.sin( lightTime * 0.3 ) * 30;
+				light4.position.y = Math.cos( lightTime * 0.7 ) * 40;
+				light4.position.z = Math.sin( lightTime * 0.5 ) * 30;
+/*
+				@TODO: Used to test scene light change ( currently unavailable )
 
+				if ( time > 2.0 && light1.parent === null ) scene.add( light1 );
+				if ( time > 2.5 && light2.parent === null ) scene.add( light2 );
+				if ( time > 3.0 && light3.parent === null ) scene.add( light3 );
+				if ( time > 3.5 && light4.parent === null ) scene.add( light4 );
+*/
 				renderer.render( scene, camera );
 
 			}
