--- a/examples/webgpu_instance_uniform.html
+++ b/examples/webgpu_instance_uniform.html
@@ -52,6 +52,8 @@
 
 					const mesh = frame.object;
 
+					const meshColor = mesh.color;
+
 					this.uniformNode.value.copy( meshColor );
 
 				}
