--- a/examples/webgl_materials_instance_uniform_nodes.html
+++ b/examples/webgl_materials_instance_uniform_nodes.html
@@ -41,7 +41,7 @@
 
 					this.updateType = Nodes.NodeUpdateType.Object;
 
-					this.uniformNode = new Nodes.UniformNode( 'color', new THREE.Color() );
+					this.uniformNode = new Nodes.UniformNode( new THREE.Color() );
 
 				}
 
