--- a/examples/webgpu_nodes_playground.html
+++ b/examples/webgpu_nodes_playground.html
@@ -165,7 +165,7 @@
 				loaderFBX.load( 'models/fbx/stanford-bunny.fbx', ( object ) => {
 
 					const defaultMaterial = new Nodes.MeshBasicNodeMaterial();
-					defaultMaterial.colorNode = new Nodes.UniformNode( 'float', 0 );
+					defaultMaterial.colorNode = new Nodes.UniformNode( 0 );
 
 					const sphere = new THREE.Mesh( new THREE.SphereGeometry( 200, 32, 16 ), defaultMaterial );
 					sphere.name = 'Sphere';
@@ -178,7 +178,7 @@
 					scene.add( box );
 
 					const defaultPointsMaterial = new Nodes.PointsNodeMaterial();
-					defaultPointsMaterial.colorNode = new Nodes.UniformNode( 'float', 0 );
+					defaultPointsMaterial.colorNode = new Nodes.UniformNode( 0 );
 
 					const torusKnot = new THREE.Points( new THREE.TorusKnotGeometry( 100, 30, 100, 16 ), defaultPointsMaterial );
 					torusKnot.name = 'Torus Knot ( Points )';
