--- a/examples/webgpu_instance_uniform.html
+++ b/examples/webgpu_instance_uniform.html
@@ -44,7 +44,7 @@
 
 					this.updateType = Nodes.NodeUpdateType.Object;
 
-					this.uniformNode = new Nodes.UniformNode( 'color', new THREE.Color() );
+					this.uniformNode = new Nodes.UniformNode( new THREE.Color() );
 
 				}
 
