split normal from struct GeometricContext to fixed adreno gpu precision bug (#75)
Co-authored-by: WenjieLiuu <56020612@qq.com>

--- a/examples/webgl_tiled_forward.html
+++ b/examples/webgl_tiled_forward.html
@@ -72,7 +72,7 @@
 				'  		pointlight.color = lightColor.rgb;',
 				'  		pointlight.decay = lightColor.a;',
 				'  		getPointLightInfo( pointlight, geometry, directLight );',
-				'		RE_Direct( directLight, geometry, material, reflectedLight );',
+				'		RE_Direct( directLight, splitGeoNormal, geometry, material, reflectedLight );',
 				'	}',
 				'}',
 				'#endif'
