Revert "WebGLRenderer: Remove RGBEEncoding and RGBEFormat. (#23060)" (#77)
This reverts commit cee9706c1c38286cf8ca5cff61202b68a0a478ac.

--- a/examples/misc_controls_arcball.html
+++ b/examples/misc_controls_arcball.html
@@ -155,6 +155,7 @@
 						render();
 
 						new RGBELoader()
+							.setDataType( THREE.UnsignedByteType )
 							.setPath( 'textures/equirectangular/' )
 							.load( 'venice_sunset_1k.hdr', function ( hdrEquirect ) {
 
