--- a/examples/webgl_materials_standard_nodes.html
+++ b/examples/webgl_materials_standard_nodes.html
@@ -140,6 +140,7 @@
 
 					const filename = environments[ name ].filename;
 					new RGBELoader()
+						.setDataType( THREE.UnsignedByteType )
 						.setPath( 'textures/equirectangular/' )
 						.load( filename, function ( hdrEquirect ) {
 
