--- a/examples/webgl_pmrem_test.html
+++ b/examples/webgl_pmrem_test.html
@@ -139,6 +139,7 @@
 
 				let radianceMap = null;
 				new RGBELoader()
+					.setDataType( THREE.UnsignedByteType )
 					// .setDataType( THREE.FloatType )
 					.setPath( 'textures/equirectangular/' )
 					.load( 'spot1Lux.hdr', function ( texture ) {
